2005-04-06  Chris Toshok  <toshok@ximian.com>
	* backends/SingleSteppingEngine.cs
	(SingleSteppingEngine.Interrupt): let's be a little less flowery,
	shall we?


svn path=/trunk/debugger/; revision=42619

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-04-06  Chris Toshok  <toshok@ximian.com>
 
+	* backends/SingleSteppingEngine.cs
+	(SingleSteppingEngine.Interrupt): let's be a little less flowery,
+	shall we?
+
+2005-04-06  Chris Toshok  <toshok@ximian.com>
+
 	* classes/StackFrame.cs (StackFrame.check_disposed): let's be a
 	little less flowery, shall we?
 
