--- a/jay/ChangeLog
+++ b/jay/ChangeLog
@@ -1,3 +1,7 @@
+2005-04-08  Chris Toshok  <toshok@ximian.com>
+
+	* Makefile.am (AM_CFLAGS): shut up automake.
+
 2004-06-10  Rafael Teixeira <rafaelteixeirabr@hotmail.com>
 	* skeleton.cs: oops some uses of changed classes/interfaces also need to become internal.
 
