--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-08  Chris Toshok  <toshok@ximian.com>
+
+	* frontend/Command.cs (UpCommand, DownCommand): oops, fix these so
+	they continue to work with no arguments.
+
 2005-04-08  Martin Baulig  <martin@ximian.com>
 
 	* backends/Inferior.cs (Inferior.InsertHardwareBreakpoint): Allow
