--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-12  Chris Toshok  <toshok@ximian.com>
+
+	* frontend/Interpreter.cs (Interpreter.ShowModules): clean up the
+	module list.
+
 2005-04-11  Chris Toshok  <toshok@ximian.com>
 
 	* backends/Debugger.cs (DebuggerBackend.LoadLibrary): if the
