--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-04-13  Chris Toshok  <toshok@ximian.com>
+
+	* interfaces/IMethod.cs: Add some docs.
+
+	* interfaces/IArchitecture.cs: same.
+
 2005-04-12  Martin Willemoes Hansen  <mwh@sysrq.dk>
 
 	* autogen.sh: Corrected error messages to print Mono-debugger 
