--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-04-18  Chris Toshok  <toshok@ximian.com>
+
+	* configure.in: fix BFD_TARGET_X86_64 AM_CONDITIONAL.  Thanks to
+	Marvin Taylor for this one.
+
 2005-04-13  Chris Toshok  <toshok@ximian.com>
 
 	* backends/mono/MonoLanguageBackend.cs: rather broken fix for
