--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-05-11  Martin Baulig  <martin@ximian.com>
+
+	* wrapper/mono-debugger-jit-wrapper.h
+	(MonoDebuggerInfo, MonoDebuggerManager): Changed the order of some
+	fields to get proper alignment on 64-bit machines.
+
+	* backends/mono/MonoSymbolFile.cs: Reflect latest JIT changes.
+	* backends/mono/MonoLanguageBackend.cs: Likewise.
+
 2005-05-10  Chris Toshok  <toshok@ximian.com>
 
 	* frontend/GnuReadLine.cs: remove the Instance stuff.
